src/pages/styles/homepage.css
.thumb_container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    column-gap: 30px;
    row-gap: 30px;
    background: var(--greyBG);
    justify-items: center;
    border-radius: 25px;
    margin: 2rem 0;
    padding: 56px 50px;
}

@media screen and (max-width: 990px) {

    .thumb_container {
        grid-template-columns: 1fr 1fr;
        padding: 36px 30px;
    }
    
}

@media screen and (max-width: 620px) { 
    
    .thumb_container {
        grid-template-columns: 1fr;
        padding: 0;
    }

    .Thumb {
        min-height: auto;
    }
}

